# py-todo

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/todo/: __init__.py  __main__.py  todo.py  todos.py
tests/: test_todo.py
